--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -18,7 +18,16 @@
     background-color: blue;
     border: transparent;
 }
+.infoCardContainer--black {
+    border-image-width: 1260px;0;0;
+    :hover background-color: white;
+}
 
 .infoCardContainer--vintage {
-    background-color: #EDCFD1
-  }
+        background-color: #EDCFD1
+}
+
+}
+.infoCardContainer--metal {
+    background-color: #e1e1e1;
+}
