--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -19,12 +19,14 @@
     border: transparent;
 }
 .infoCardContainer--black {
-    border-image-width: 1260px;0;0;
-    :hover background-color: white;
+    border-image-width: 1260px;
+    border-image-slice: 0px;
+    border-image: 0px;
+    hover background-color: #ffffff;
 }
 
 .infoCardContainer--vintage {
-        background-color: #EDCFD1
+    background-color: #EDCFD1
 }
 
 }
